# openipmi

./: .gitignore  CONFIGURING_FOR_LAN  ChangeLog  FAQ  HowToDesignIPMIHardware.tex  Makefile.am  OpenIPMI.pc.in  OpenIPMI.spec.in  OpenIPMI.texi  OpenIPMIcmdlang.pc.in  OpenIPMIglib.pc.in  OpenIPMIglib12.pc.in  OpenIPMIposix.pc.in  OpenIPMIpthread.pc.in  OpenIPMItcl.pc.in  OpenIPMIui.pc.in  OpenIPMIutils.pc.in  README  README.Force  README.MotorolaMXP  Requirements  TODO  aclocal.m4  basic_ui.c  configure.ac  configure.in  conn.c  control.c  domain.c  entity.c  heap.h  ilist.c  ilist.h  ind.c  ipmi.c  ipmi.init  ipmi.sysconf  ipmi_auth.c  ipmi_lan.c  ipmi_malloc.c  (+38 more)
cmdlang/: .gitignore  Makefile.am  README  cmd_conn.c  cmd_control.c  cmd_domain.c  cmd_entity.c  cmd_fru.c  cmd_lanparm.c  cmd_mc.c  cmd_pef.c  cmd_pet.c  cmd_sel.c  cmd_sensor.c  cmd_solparm.c  cmdlang.c  ipmish.c  os_debug.c  out_fru.c
doc/: ATCAHardware  BusSystem.dia  ComplexHotSwap.dia  HPIProblems  HowToDesignIPMIHardware  Hyst.dia  IPMI.ltx  IPMI_Problems  ImplementingHPI  Makefile.am  ManagementController.dia  MgmtIF.dia  OpenIPMI.texi  SOL_Spec  ServerSystem.dia  SimpleHotSwap.dia  SimpleMonitoring.dia  Thresh.dia  ipmi.bib  recv_cmd.c
glib/: Makefile.am  glib_os_hnd.c
include/: Makefile.am
include/OpenIPMI/: Makefile.am  deprecator.h  ilist.h  ipmi_addr.h  ipmi_auth.h  ipmi_bits.h  ipmi_cmdlang.h  ipmi_conn.h  ipmi_control.h  ipmi_debug.h  ipmi_domain.h  ipmi_entity.h  ipmi_err.h  ipmi_event.h  ipmi_fru.h  ipmi_glib.h  ipmi_int.h  ipmi_lan.h  ipmi_lanparm.h  ipmi_locks.h  ipmi_log.h  ipmi_malloc.h  ipmi_mc.h  ipmi_msgbits.h  ipmi_oem.h  ipmi_pef.h  ipmi_pet.h  ipmi_picmg.h  ipmi_posix.h  ipmi_sdr.h  ipmi_sel.h  ipmi_sensor.h  ipmi_smi.h  ipmi_sol.h  ipmi_solparm.h  ipmi_string.h  ipmi_tcl.h  ipmi_types.h  ipmi_ui.h  ipmi_user.h  (+9 more)
include/OpenIPMI/internal/: Makefile.am  ilist.h  ipmi_control.h  ipmi_domain.h  ipmi_entity.h  ipmi_event.h  ipmi_fru.h  ipmi_int.h  ipmi_locks.h  ipmi_malloc.h  ipmi_mc.h  ipmi_oem.h  ipmi_sel.h  ipmi_sensor.h  ipmi_utils.h  locked_list.h  md2.h  md5.h  opq.h
include/ipmi/: Makefile.am  ipmi_addr.h  ipmi_auth.h  ipmiif.h  (+18 more)
lanserv/: .gitignore  Makefile.am  README.design  README.emulator  README.ipmi_sim  README.vm  README.yourownbmc  REAME.emulator  TODO  atca.emu  bmc.c  bmc.h  bmc_app.c  bmc_chassis.c  bmc_picmg.c  bmc_sensor.c  bmc_storage.c  bmc_transport.c  config.c  emu.c  emu.h  emu_cmd.c  extcmd.c  ipmi_checksum.c  ipmi_lan.5  ipmi_sim.1  ipmi_sim.c  ipmi_sim_chassiscontrol  ipmi_sim_cmd.5  ipmi_sim_lancontrol  ipmisim1.emu  ipmisim1.sdrs  lan.conf  lanserv.c  lanserv_asf.c  lanserv_config.c  lanserv_emu.c  lanserv_ipmi.c  lanserv_oem_force.c  persist.c  (+7 more)
lanserv/OpenIPMI/: Makefile.am  extcmd.h  ipmi_sim_info.h  lanserv.h  mcserv.h  msg.h  persist.h  serserv.h  serv.h
lanserv/marvell-bmc/: Build_Marvell_BMC.sh  BuildingAndConfiguring.tex  Install_Marvell_BMC.sh  Makefile.am  S90ast1300  SystemInfo  TODO  board.sdrs  busybox-1.18.4.config  fan.sdrs  interfaces  lan.conf  lancontrol  main.sdrs  marvell.emu  marvell_bmc.busyboxconfig  marvell_bmc.config  marvell_mod.c  marvell_node.emu  netsrvc  ntp.conf  wiw.h
lanserv/sdrcomp/: .gitignore  Makefile.am  sdrcomp.c
lib/: Makefile.am  aes_cbc.c  chassis.c  conn.c  control.c  domain.c  entity.c  event.c  fru.c  fru_spd_decode.c  hmac.c  ilist.c  ipmi.c  ipmi_lan.c  ipmi_malloc.c  ipmi_oem_force_conn.c  ipmi_payload.c  ipmi_smi.c  ipmi_sol.c  ipmi_utils.c  lanparm.c  manfid.h  mc.c  md5.c  normal_fru.c  oem_atca.c  oem_atca_conn.c  oem_atca_fru.c  oem_force_conn.c  oem_intel.c  oem_kontron_conn.c  oem_motorola_mxp.c  oem_motorola_mxp_intf.c  oem_test.c  opq.c  pef.c  pet.c  posix_thread_os_hnd.c  rakp.c  sdr.c  (+6 more)
libedit/: .gitignore  Makefile  Makefile.am  Makefile.in  chared.c  common.c  el.c  el_term.h  emacs.c  fgetln.c  filecomplete.c  hist.c  history.c  key.c  makelist  map.c  orig_editline.diff  orig_editline.diff2  parse.c  prompt.c  read.c  readline.c  refresh.c  search.c  sig.c  strlcat.c  strlcpy.c  sys.h  term.c  tokenizer.c  tty.c  unvis.c  vi.c  vis.c
man/: Makefile.am  ipmi.3  ipmi_cmdlang.7  ipmi_control.3  ipmi_domain.3  ipmi_entity.3  ipmi_event.3  ipmi_fru.3  ipmi_lan.5  ipmi_sensor.3  ipmi_sim.1  ipmi_sim_cmd.5  ipmi_ui.1  ipmicmd.1  ipmilan.8  ipmish.1  openipmi_conparms.7  openipmi_eventd.1  openipmicmd.1  openipmigui.1  openipmish.1  rmcp_ping.1
sample/: .gitignore  Makefile.am  dump_sensors.c  eventd.c  example_oem.c  ipmi_serial_bmc_emu.c  ipmicmd.c  linux_cmd_handler.c  rmcp_ping.c  sample.c  sample2.c  sample3.c  solterm.c  waiter_sample.c
swig/: Makefile.am  OpenIPMI.h  OpenIPMI.i  OpenIPMI_perl.c  glibshim.c
swig/perl/: .gitignore  Lanserv.pm  Makefile.am  OpenIPMI.h  OpenIPMI_lang.i  OpenIPMI_perl.c  dummystuff.c  get_events  ipmi_powerctl  lan.conf  runtest  sample  test_atca_entities  test_atca_entities.p  test_chan  test_chan.p  test_fru  test_fru.p  test_lanparm  test_lanparm.p  test_pef  test_pef.p  test_pet  test_pet.p
swig/python/: .gitignore  Makefile.am  OpenIPMI.h  OpenIPMI_lang.i  ipmigui.py  openipmigui.py  sample.py  sample2.py
swig/python/openipmigui/: Makefile.am  TODO  _SoL.py  __init__.py  _cmdwin.py  _conn.py  _control.py  _domain.py  _domainDialog.py  _entity.py  _errstr.py  _fru.py  _mc.py  _mc_chan.py  _mc_lanparm.py  _mc_pefparm.py  _mc_solparm.py  _mc_user.py  _misc.py  _oi_logging.py  _saveprefs.py  _sel.py  _sensor.py  _term.py  gui.py  gui_SoL.py  gui_cmdwin.py  gui_domainDialog.py  gui_errstr.py  gui_lightset.py  gui_list.py  gui_popup.py  gui_setdialog.py  gui_term.py  gui_treelist.py  gui_winsys.py
tcl/: .gitignore  Makefile.am  tcl_os_hnd.c  test_handlers.c
ui/: .gitignore  Makefile.am  basic_ui.c  ui.c  ui_command.c  ui_command.h  ui_keypad.c  ui_keypad.h  ui_os.c
unix/: .gitignore  Makefile.am  heap.h  posix_os_hnd.c  posix_thread_os_hnd.c  selector.c  test_handlers.c  test_heap.c
utils/: Makefile.am  hash.c  ilist.c  ipmi_auth.c  ipmi_malloc.c  locked_list.c  locks.c  md2.c  md5.c  os_handler.c  selector.c  string.c  test_md2.c  test_md5.c
(+6 files in other folders)
